--- a/Advance Conference/index.html
+++ b/Advance Conference/index.html
@@ -68,6 +68,7 @@
             <p style="font-size: 25px;"> 
               This isn’t just another church event. This is a divine encounter.
               A life-transforming program where ordinary lives are awakened to extraordinary destiny.</p> 
+             <a href="#featured-services" class="btn-get-started">Register Now</a>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -76,7 +77,7 @@
           <div class="carousel-container">
             <h2>Encounters</h2>
             <p style="font-size: 25px;">You were never meant to do life in your own strength. Be filled, empowered, and activated by the Spirit to rise above and lead with authority.</p>
-          
+           <a href="#featured-services" class="btn-get-started">Register Now</a>
           </div>
         </div><!-- End Carousel Item -->
 
