--- a/Advance Conference/index.html
+++ b/Advance Conference/index.html
@@ -64,7 +64,7 @@
         <div class="carousel-item active">
           <img src="assets/img/crusade.jpeg" alt="">
           <div class="carousel-container">  
-            <h2 style="font-size: 60px;">Impact. Purpose. Power.</h2>
+            <h2>Impact. Purpose. Power.</h2>
             <p style="font-size: 25px;"> 
               This isn’t just another church event. This is a divine encounter.
               A life-transforming program where ordinary lives are awakened to extraordinary destiny.</p> 
