--- a/Advance Conference/index.html
+++ b/Advance Conference/index.html
@@ -7,7 +7,7 @@
   <title>The Haven Lekki Crusade</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>The Haven Lekki Crusade</title>
+  <title>Advance Conference</title>
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -37,11 +37,10 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/haven.png" alt="" style="width: 40px;">
-        <h4 class="" style="font-size: 18px;">The Haven Lekki</h4>
+       
       </a>
 
-      <nav id="navmenu" class="navmenu">
+<!--       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active" style="border-radius: 20px; background-color: #742169; color: white;">Time: 4:00 PM</a></li>
           <li><a href="#hero" class="active" style="border-radius: 20px; background-color: #742169; color: white;">Date: May 17th, 2025</a></li>  
@@ -49,7 +48,7 @@
         
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
+      </nav> -->
 
     </div>
   </header>
