--- a/Advance Conference/index.html
+++ b/Advance Conference/index.html
@@ -61,11 +61,11 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="assets/img/crusade.jpeg" alt="">
+          <img src="assets/img/ad.png" alt="">
           <div class="carousel-container">  
             <h2>Impact. Purpose. Power.</h2>
             <p style="font-size: 23px;"> 
-              This isn’t just another church event. This is a divine encounter.
+              This is a divine encounter,
               A life-transforming program where ordinary lives are awakened to extraordinary destiny.</p> 
              <a href="#featured-services" class="btn-get-started">Register Now</a>
           </div>
