--- a/Advance Conference/index.html
+++ b/Advance Conference/index.html
@@ -61,7 +61,7 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="assets/img/ad.png" alt="">
+          <img src="assets/img/" alt="">
           <div class="carousel-container">  
             <h2>Impact. Purpose. Power.</h2>
             <p style="font-size: 23px;"> 
